--- a/src/index.css
+++ b/src/index.css
@@ -3,26 +3,30 @@
   padding: 5px 20px;
   box-sizing: border-box;
   text-decoration: none;
-  background-color: aqua;
+  background-color: rgb(3, 138, 138);
 }
 .navbar{
   display: flex;
   justify-content: space-between;
-  height: 70px;
+  align-items: center;
+  height: 100px;
+  border-bottom: 1px solid rgb(184, 133, 142);
 }
 .select{
   height: 50px;
   border: none;
   font-size: 15px;
   font-weight: 800;
-  width: 120px;
+  width: 170px;
+  color: white;
 }
 .select2{
   height: 50px;
   border: none;
   font-size: 15px;
   font-weight: 800;
-  width: 70px;
+  width: 159px;
+  color: white;
 }
 .logo{
   display: flex;
@@ -35,7 +39,24 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 600px;
+  width: 800px;
+  color: white;
 }
-
-
+.menu .active{
+  color: red;
+  font-weight: 800;
+  border-bottom: 2px solid blue;
+  width: 80px;
+}
+.menu .nav-link{
+  font-family: 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
+  font-weight: 800;
+  color: white;
+}
+.button-book{
+  width: 148px;
+  height: 48px;
+  font-family: 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
+  font-weight: 800;
+  font-size: 17px;
+}
