--- a/src/index.css
+++ b/src/index.css
@@ -53,13 +53,7 @@
   font-weight: 800;
   color: white;
 }
-.button-book{
-  width: 148px;
-  height: 48px;
-  font-family: 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
-  font-weight: 800;
-  font-size: 17px;
-}
+
 .slide1 h1{
   font-size: 70px;
   font-weight: 700;
@@ -71,8 +65,46 @@
   font-weight: 700;
   font-family: 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
 }
-.slide1 .view{
+.view{
   margin-top: 20px;
   border: 1px solid #f8bf64;
-  padding: 10px 40px;
+  padding: 18px 40px;
+  color: White;
+  font-size: 20px;
+  font-weight: 800;
+  background-color: #f8bf64;
+  border-radius: 3px;
+}
+.slide1{
+  margin-top: 100px;
+  font-family: 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
+}
+.view-div{
+  margin-top: 60px;
+}
+.button-book{
+  padding: 15px 30px;
+  font-size: 18px;
+  font-weight: 700;
+  font-family: 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
+  border: 1px solid #f8bf64;
+  border-radius: 2px;
+}
+.slide2 h1{
+  font-size: 70px;
+  font-weight: 700;
+  color: white;
+ 
+}
+.slide2{
+  text-align: center;
+  margin-top: 120px;
+  font-family: 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
+}
+.slide2 p{
+  font-size: 20px;
+  color: white;
+  font-weight: 700;
+  font-family: 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
+  margin-top: 30px;
 }
