--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
   padding: 5px 20px;
   box-sizing: border-box;
   text-decoration: none;
-  background-color: rgb(3, 138, 138);
+  background-color: silver;
 }
 .navbar{
   display: flex;
@@ -107,4 +107,46 @@
   font-weight: 700;
   font-family: 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
   margin-top: 30px;
+}
+
+.lala{
+  width: 298px;
+  background: silver;
+  border-radius: 8px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.lala img{
+  height: 220px;
+  width: 280px;
+}
+
+.wewe{
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.lala button{
+  margin-left: 20px;
+  padding: 12px 60px;
+  border-radius: 20px;
+  font-size: 18px;
+  transition: 0.5s;
+  border: 1px solid rgba(34, 34, 34, 0.462);
+  box-shadow: 0 0 10px #222;
+  text-transform: capitalize;
+  font-weight: 700;
+
+}
+
+.lala button:hover{
+  background: black;
+  color: white;
+  transition: 0.5s;
+}
+
+.all{
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 20px;
+  column-gap: 20px;
 }
