--- a/src/index.css
+++ b/src/index.css
@@ -141,7 +141,7 @@
   display: flex;
   flex-wrap: wrap;
   row-gap: 20px;
-  column-gap: 20px;
+  column-gap: 160px;
 }
 .wewe .menu-template{
   text-align: center;
@@ -164,18 +164,57 @@
   font-size: 29px;
   transition: 0.6s;
 }
-.chefs{
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-}
 
 .chefs{
   display: flex;
   flex-wrap: wrap !important;
+  column-gap: 220px;
+  row-gap: 40px;
 }
 
 .chefs img{
   border-radius: 45px;
   height: auto;
+}
+
+.chefs h1{
+  font-family: Arial, Helvetica, sans-serif;
+  width: auto;
+  transition: 0.7s;
+}
+.chefs h2{
+  font-family: Arial, Helvetica, sans-serif;
+  transition: 0.7s;
+}
+.chefs p{
+  font-family: Arial, Helvetica, sans-serif;
+  transition: 0.7s;
+}
+
+.chefs h1:hover{
+  color: aliceblue;
+  font-size: 35px;
+  transition: 0.7s;
+}
+.chefs h2:hover{
+  color: aliceblue;
+  font-size: 23px;
+  transition: 0.7s;
+}
+.chefs p:hover{
+  color: aliceblue;
+  font-size: 23px;
+  transition: 0.7s;
+}
+
+.chef{
+  box-shadow: 0 0 10px #222;
+  border-radius: 14px;
+}
+
+.chefs img{
+display: flex;
+align-items: center;
+justify-content: center;
+margin-left: 29px;
 }
