--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,60 @@
 *{
-  margin: 0;
-  padding: 5px 20px;
-  box-sizing: border-box;
+   margin: 0; 
+   /* padding: 5px 20px;  */
+   box-sizing: border-box;
   text-decoration: none;
   background-color: rgb(255, 252, 252);
+} 
+body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  font-size: 17px;
+  line-height: 1.765;
+  color: #7a7a7a;
+  font-family: "Poppins";
+  -moz-osx-font-smoothing: antialiased;
+  -webkit-font-smoothing: antialiased;
+}
+body {
+  margin: 0;
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  text-align: left;
+  background-color: #fff;
+}
+:root {
+  --blue: #007bff;
+  --indigo: #6610f2;
+  --purple: #6f42c1;
+  --pink: #e83e8c;
+  --red: #dc3545;
+  --orange: #fd7e14;
+  --yellow: #ffc107;
+  --green: #28a745;
+  --teal: #20c997;
+  --cyan: #17a2b8;
+  --white: #fff;
+  --gray: #6c757d;
+  --gray-dark: #343a40;
+  --primary: #007bff;
+  --secondary: #6c757d;
+  --success: #28a745;
+  --info: #17a2b8;
+  --warning: #ffc107;
+  --danger: #dc3545;
+  --light: #f8f9fa;
+  --dark: #343a40;
+  --breakpoint-xs: 0;
+  --breakpoint-sm: 576px;
+  --breakpoint-md: 768px;
+  --breakpoint-lg: 992px;
+  --breakpoint-xl: 1200px;
+  --font-family-sans-serif: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+  --font-family-monospace: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
 }
 .navbar{
   display: flex;
@@ -107,6 +158,7 @@
   color: #131a33;
   border-radius: 8px;
   font-family: Arial, Helvetica, sans-serif;
+  padding: 50px 0px;
 }
 
 .lala img{
@@ -140,8 +192,8 @@
 .all{
   display: flex;
   flex-wrap: wrap;
-  row-gap: 20px;
-  column-gap: 160px;
+  column-gap: 10px;
+  justify-content: center;
 }
 .wewe .menu-template{
   text-align: center;
@@ -168,27 +220,40 @@
 .chefs{
   display: flex;
   flex-wrap: wrap;
-  column-gap: 220px;
+  /* column-gap: 220px; */
+  align-items: center;
+  justify-content: center;
   row-gap: 40px;
+  padding: 120px 0px;
 }
 
 .chefs img{
   border-radius: 45px;
   height: auto;
+  width: auto;
 }
 
 .chefs h1{
   font-family: Arial, Helvetica, sans-serif;
   width: auto;
   transition: 0.7s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .chefs h2{
   font-family: Arial, Helvetica, sans-serif;
   transition: 0.7s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .chefs p{
   font-family: Arial, Helvetica, sans-serif;
   transition: 0.7s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .chefs h1:hover{
@@ -208,7 +273,7 @@
 }
 
 .chef{
-  box-shadow: 0 0 10px #22222220;
+  /* box-shadow: 0 0 10px #22222220; */
   border-radius: 14px;
 }
 
@@ -222,7 +287,9 @@ margin-left: 29px;
 .imgbrd{
   background-image: url(./menu/brd1.jpg);
   background-size:cover;
-  padding: 125px 0px;
+  background-position: center center;
+  line-height: 1.965;
+  border-bottom: 1px solid rgb(184, 133, 142);
 }
 
 .imgbrd h1{
@@ -234,6 +301,6 @@ margin-left: 29px;
 }
 .imgbrd h2{
   background: none;
-  font-size: 30px;
-  color: #131a33;
+  font-size: 26px;
 }
+
