--- a/src/index.css
+++ b/src/index.css
@@ -58,7 +58,7 @@ body {
 }
 .navbar{
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   height: 100px;
   border-bottom: 1px solid rgb(184, 133, 142);
@@ -94,9 +94,9 @@ body {
   color: #131a33;
 }
 .menu .active{
-  color: red;
-  font-weight: 800;
-  border-bottom: 2px solid blue;
+  color: inherit;
+  text-decoration: none;
+  transition: 0.3s all ease-in-out;
 }
 .menu .nav-link{
   font-size: 25px;
@@ -293,6 +293,7 @@ margin-left: 29px;
   background-position: center center;
   line-height: 1.965;
   border-bottom: 1px solid rgb(184, 133, 142);
+  height: 430px;
 }
 
 .imgbrd h1{
@@ -309,4 +310,79 @@ margin-left: 29px;
 
 .buy h1{
   color: rebeccapurple;
+}
+
+.table{
+  color: inherit;
+    text-decoration: none;
+    transition: 0.3s all ease-in-out;
+}
+
+.table-img{
+  background-image: url(./menu/brd1.jpg);
+  background-size:cover;
+  background-position: center center;
+  line-height: 1.965;
+  border-bottom: 1px solid rgb(184, 133, 142);
+  height: 430px;
+  margin-top: 50px;
+}
+
+.dad-table h1{
+  background: none;
+    padding-bottom: 25px;
+    margin: 0;
+    font-family: "Playfair Display";
+    color: #131a33;
+    font-size: 120px;
+    font-weight: 700;
+    padding-bottom: 25px;
+    margin-left: 180px;
+}
+.dad-table h2{
+  background: none;
+  font-size: 20px;
+  margin-left: 180px;
+  margin-bottom: 50px;
+}
+
+.free{
+  height: 900px;
+  width: 899px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 350px;
+  margin-top: 80px;
+  box-shadow: 0 0 10px #22222220;
+}
+
+.mom h4{
+  color: #121850;
+    font-size: 50px;
+    font-weight: 700;
+    letter-spacing: 10px;
+    text-transform: uppercase;
+    margin: 0;
+    font-family: "Playfair Display";
+    margin-right: 220px;
+    margin-bottom: 630px;
+}
+
+.dip input{
+  border: none;
+  width: 80%;
+  color: #121850;
+  flex-wrap: wrap;
+}
+
+h3{
+  color: #131a33;
+  font-size: 30px;
+  font-weight: 700;
+  font-family: "Playfair Display";
+}
+
+.dip{
+  display: flex;
 }
