--- a/src/index.css
+++ b/src/index.css
@@ -211,13 +211,16 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: 0.6s;
+  width: 200px;
+  height: 50px;
+  transition: 0.3s;
+  margin: 0 auto;
 }
 
 .btn-menu:hover{
   color: #222;
   font-size: 29px;
-  transition: 0.6s;
+  transition: 0.3s;
 }
 
 .chefs{
@@ -259,22 +262,6 @@ body {
   justify-content: center;
 }
 
-.chefs h1:hover{
-  color: aliceblue;
-  font-size: 35px;
-  transition: 0.7s;
-}
-.chefs h2:hover{
-  color: aliceblue;
-  font-size: 23px;
-  transition: 0.7s;
-}
-.chefs p:hover{
-  color: aliceblue;
-  font-size: 23px;
-  transition: 0.7s;
-}
-
 .chef{
   /* box-shadow: 0 0 10px #22222220; */
   border-radius: 14px;
@@ -294,18 +281,20 @@ margin-left: 29px;
   line-height: 1.965;
   border-bottom: 1px solid rgb(184, 133, 142);
   height: 430px;
+  padding: 5px 130px;
 }
 
 .imgbrd h1{
   background: none;
   color: #131a33;
-    font-size: 120px;
+    font-size: 90px;
     font-weight: 700;
     padding-bottom: 25px;
 }
 .imgbrd h2{
   background: none;
-  font-size: 26px;
+  font-size: 22px;
+  font-weight: 200;
 }
 
 .buy h1{
