--- a/src/index.css
+++ b/src/index.css
@@ -163,7 +163,16 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   padding: 50px 0px;
 }
-
+.lala h1{
+  font-size: 35px ;
+  color: goldenrod;
+}
+.lala h4{
+  font-size: 15px;
+  width: 290px;
+  height: 45px;
+  color: grey;
+}
 .lala img{
   height: 220px;
   width: 280px;
@@ -231,6 +240,7 @@ body {
   justify-content: center;
   row-gap: 40px;
   padding: 120px 0px;
+  cursor: all-scroll;
 }
 
 .chefs img{
