--- a/src/index.css
+++ b/src/index.css
@@ -61,7 +61,13 @@ body {
   justify-content: space-evenly;
   align-items: center;
   height: 100px;
-  border-bottom: 1px solid rgb(184, 133, 142);
+  border-bottom: 3px solid rgb(184, 133, 142);
+  position: fixed;
+  width: 1600px;
+  top: 0;
+  left: 0;
+  right: 0;
+  transition: 1s !important;
 }
 .select{
   height: 50px;
@@ -92,7 +98,10 @@ body {
   align-items: center;
   width: 800px;
   color: #131a33;
+  background: none;
 }
+
+
 .menu .active{
   color: inherit;
   text-decoration: none;
@@ -161,7 +170,7 @@ body {
   color: #131a33;
   border-radius: 8px;
   font-family: Arial, Helvetica, sans-serif;
-  padding: 50px 0px;
+  padding: 20px 0px;
 }
 .lala h1{
   font-size: 35px ;
@@ -240,7 +249,7 @@ body {
   justify-content: center;
   row-gap: 40px;
   padding: 120px 0px;
-  cursor: all-scroll;
+  /* cursor: nw-resize; */
 }
 
 .chefs img{
@@ -282,6 +291,10 @@ display: flex;
 align-items: center;
 justify-content: center;
 margin-left: 29px;
+}
+
+.chef NavLink{
+  color: black;
 }
 
 .imgbrd{
@@ -384,4 +397,11 @@ h3{
 
 .dip{
   display: flex;
+}
+
+.mood{
+  color: #222;
+  padding: 0px 11px;
+  font-size: 18px;
+  font-family: Arial, Helvetica, sans-serif;
 }
