--- a/src/index.css
+++ b/src/index.css
@@ -449,10 +449,16 @@ h3{
     border-radius: 10px;
   }
   .fix button{
-    width: 100px;
+    padding: 20px 60px;
     height: 30px;
     margin-bottom: 15px;
-    border-radius: 10px;
+    border-radius: 20px;
+    align-items: center;
+    justify-content: space-between;
+    display: inline-flex;
+    margin: 12px 16px;
+    background-color: black;
+    color: white;
   }
 .mood{
   color: #222;
