--- a/src/index.css
+++ b/src/index.css
@@ -62,13 +62,46 @@ body {
   align-items: center;
   height: 100px;
   border-bottom: 3px solid rgb(184, 133, 142);
-  position: fixed;
+  /* position: fixed; */
   width: 1600px;
   top: 0;
   left: 0;
   right: 0;
   transition: 1s !important;
   background-color: white;
+}
+.map .h1{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 15px;
+  font-size: 20px;
+  margin: 0 auto; 
+}
+.names{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0 80px;
+}
+.map{
+  border: 2px solid black;
+  width: 100%;
+  height: 100px;
+  padding: 0 100px;
+}
+.map h2{
+  font-size: 12px;
+  color: grey;
+  text-align: left;
+  margin-bottom: 10px;
+}
+.map button{
+  padding: 7px 35px;
+  text-align: right;
+  border-radius: 10px;
+  background-color: black;
+  color: white;
 }
 .select{
   height: 50px;
@@ -448,6 +481,8 @@ h3{
 }
   .buy-setting{
     padding: 20px 30px;
+    width: 500px;background-color: #131a33;
+    border-radius: 10px;
   }
   .buy-setting input{
     width: 200px;
@@ -531,12 +566,10 @@ h3{
 @media only screen and (max-width:400px){
   .navbar{
     display: flex;
-    position: fixed;
     justify-content: space-evenly;
     align-items: center;
     height: 100px;
     border-bottom: 3px solid rgb(184, 133, 142);
-    position: fixed;
     width: 400px;
     top: 0;
     left: 0;
@@ -545,7 +578,7 @@ h3{
     background-color: #131a33;
   }
   .menu .nav-link{
-    font-size: 15px;
+    font-size: 12px;
     font-family: 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
     font-weight: 800;
     color: white;
@@ -576,12 +609,12 @@ h3{
     margin-top: 30px;
     font-size: 35px;
     font-weight: 700;
-    color: #131a33;
+    color: wite;
     margin-left: 8px;
   }
   .slide1 p{
     font-size: 15px;
-    color: #131a33;
+    color: white;
     font-weight: 700;
     font-family: 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
   }
@@ -596,12 +629,12 @@ h3{
   .slide2 h1{
     font-size: 35px;
     font-weight: 700;
-    color: #131a33;
+    color: white;
    
   }
   .slide2 p{
     font-size: 15px;
-    color: #131a33;
+    color: wite;
     font-weight: 700;
     font-family: 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
     margin-top: 30px;
@@ -661,6 +694,7 @@ h3{
     margin-top: 120px;
     height: 100px;
     position: absolute;
+    display: none;
 }
 .imgbrd h2{
   background: none;
@@ -712,5 +746,13 @@ h3{
     padding: 0px 11px;
     font-size: 9px;
     font-family: Arial, Helvetica, sans-serif;
+  }
+  .map .h1{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 15px;
+    font-size: 15px;
+    margin: 0 auto; 
   }
 }
