--- a/src/index.css
+++ b/src/index.css
@@ -138,10 +138,26 @@ body {
   font-weight: 700;
   margin-top: 17px !important;
   display: -webkit-inline-box;
+  background: white;
+}
+.views{
+  margin-left: 420px;
+  padding: 12px 60px;
+  border-radius: 20px;
+  font-size: 18px;
+  transition: 0.5s;
+  border: 1px solid rgba(34, 34, 34, 0.462);
+  box-shadow: 0 0 10px #222;
+  text-transform: capitalize;
+  font-weight: 700;
+  margin-top: 17px !important;
+  display: -webkit-inline-box;
+  background: white;
 }
 .slide1{
   margin-top: 100px;
   font-family: 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
+  margin-left: 220px;
 }
 .view-div{
   margin-top: 60px;
@@ -709,4 +725,31 @@ h3{
     font-size: 9px;
     font-family: Arial, Helvetica, sans-serif;
   }
+}
+
+.div{
+    top: 0;
+    left: 0;
+    content: ""; 
+    height: 800px;
+    width: 370px;
+    background-color: #f8bf64;;
+    background-image: url("https://jthemes.net/themes/html/fodige/assets/img/about/abi.png");
+  }
+
+.every .happy{
+  background-image: url("https://jthemes.net/themes/html/fodige/assets/img/about/ab1.jpg");
+  height: 422px;
+  width: 529px;
+  margin-top: 150px;
+  margin-left: 370px;
+  border-bottom-right-radius: 100px;
+  border-top-left-radius: 100px;
+}
+
+.div .nana{
+  background-image: url("https://jthemes.net/themes/html/fodige/assets/img/about/ab2.png");
+  height: 953;
+  width: 270px;
+  align-items: center;
 }
